[package]
name = "contract"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org>", "Eugene The Dream <ek@proximity.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=4.0.0-pre.8"
near-contract-standards = "=4.0.0-pre.8"
uint = { version = "=0.9.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
